fix navBar being too low and commented out js file

--- a/sac.css
+++ b/sac.css
@@ -6,6 +6,7 @@
 
 #navBar {
     display: none;
+    margin-top: 0px;
 }
 
 header {
@@ -24,7 +25,8 @@ header {
 }
 
 #webLogo {
-    float:inline-start;
+    float: left;
+    width: 20%;
     display: flex;
     font-size: 8px;
     color: #bdae93;
@@ -38,9 +40,9 @@ a {
 nav {
     height: auto;
     float: right;
+    padding-top: 5px;
     margin-right: 10px;
     font-size: x-small;
-    margin-top: 20px;
 }
 
 .navi {
